tests/baselines/reference/parserClassDeclaration9.errors.txt
==== tests/cases/compiler/parserClassDeclaration9.ts (1 errors) ====
    class C {
       foo();
       ~~~
!!! parserClassDeclaration9.ts(2,4): error TS2238: Function implementation expected.
    }